--- a/rulesets/pimcoreX/ruleset_bundles.conf
+++ b/rulesets/pimcoreX/ruleset_bundles.conf
@@ -3,8 +3,10 @@ PHPCS=1
 PHPMD=1
 PHPCPD=1
 PHPLOC=1
+PHPDOCCHECK=1
 #Arguments used for check script
 PHPCS_ARGS="--extensions=php --ignore="*/Tests/*,*/Resources/views/*" --standard=./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcoreX/phpcs_ruleset.xml ./src ./bundles -s"
 PHPMD_ARGS="./src,./bundles text ./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcoreX/phpmd_ruleset.xml --exclude=\"*/Resources/views/*\""
 PHPCPD_ARGS="src bundles"
 PHPLOC_ARGS="src bundles"
+PHPDOCCHECK_ARGS="-w --directory=bundles"
