--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
     "squizlabs/php_codesniffer": "^3.6",
     "cache/integration-tests": "^0.17",
     "codeception/codeception": "^4.0",
-    "phpmd/phpmd": "^2.10",
+    "phpmd/phpmd": "2.13.0",
     "sebastian/phpcpd": "^6.0",
     "phploc/phploc": "^7.0",
     "php-censor/phpdoc-checker": "^3.1"
