--- a/default-args.conf
+++ b/default-args.conf
@@ -1,6 +1,4 @@
 #Arguments used for check script
 PHPCS_ARGS=""
 PHPMD_ARGS=""
-PHPCPD_ARGS=""
-PHPLOC_ARGS=""
-PHPDOCCHECK_ARGS=""
+PHPSTAN_ARGS=""
