feat: phpstan default level 6

--- a/rulesets/pimcore11/ruleset_bundles.conf
+++ b/rulesets/pimcore11/ruleset_bundles.conf
@@ -5,4 +5,4 @@ PHPSTAN=1
 #Arguments used for check script
 PHPCS_ARGS="--extensions=php --ignore="*/Tests/*,*/Resources/views/*" --standard=./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcore11/phpcs_ruleset.xml ./src ./bundles -s"
 PHPMD_ARGS="./src,./bundles text ./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcore11/phpmd_ruleset.xml --exclude=\"*/Resources/views/*\""
-PHPSTAN_ARGS="analyse bundles"
+PHPSTAN_ARGS="--level=6 analyse bundles"
