--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,10 @@
     "squizlabs/php_codesniffer": "^3.6",
     "phpmd/phpmd": "2.13.0",
     "phpstan/phpstan": "^1.10",
-    "symplify/phpstan-rules": "^12.4"
+    "symplify/phpstan-rules": "^12.4",
+    "phpstan/phpstan-symfony": "^1.3"
   },
-  "bin":["bin/mds-code-check"]
+  "bin": [
+    "bin/mds-code-check"
+  ]
 }
