--- a/rulesets/pimcore11/ruleset.conf
+++ b/rulesets/pimcore11/ruleset.conf
@@ -1,7 +1,8 @@
 #Enable/Disable checks with 0|1
 PHPCS=1
 PHPMD=1
+PHPSTAN=1
 #Arguments used for check script
 PHPCS_ARGS="--extensions=php --ignore="*/Tests/*,*/Resources/views/*" --standard=./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcore11/phpcs_ruleset.xml ./src -s"
 PHPMD_ARGS="./src text ./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcore11/phpmd_ruleset.xml --exclude=\"*/Resources/views/*\""
-PHPSTAN_ARGS="analyse src"
+PHPSTAN_ARGS="--level=6 analyse src"
