feat: add PHPStan, remove PHPDoc Checker

--- a/rulesets/pimcore6/ruleset.conf
+++ b/rulesets/pimcore6/ruleset.conf
@@ -3,9 +3,10 @@ PHPCS=1
 PHPMD=1
 PHPCPD=1
 PHPLOC=1
+PHPSTAN=0
 #Arguments used for check script
 PHPCS_ARGS="--extensions=php --ignore="*/Tests/*,*/Resources/views/*" --standard=./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcore6/phpcs_ruleset.xml ./src -s"
 PHPMD_ARGS="./src text ./vendor/mds-agenturgruppe/php-code-checker/rulesets/pimcore6/phpmd_ruleset.xml --exclude=\"*/Resources/views/*\""
 PHPCPD_ARGS="src"
-PHPDOCCHECK_ARGS="--directory=src"
 PHPLOC_ARGS="src"
+PHPSTAN_ARGS=""
