--- a/composer.json
+++ b/composer.json
@@ -1,16 +1,19 @@
 {
   "name": "mds-agenturgruppe/php-code-checker",
-  "description": "CLI tool for running PHP 8.x code checks",
+  "description": "CLI tool for running PHP 8.x code checks for Pimcore 6 and 10",
   "type": "library",
   "license": "GPL-3.0-or-later",
   "require": {
-    "squizlabs/php_codesniffer": "^3.6",
-    "cache/integration-tests": "^0.17",
-    "codeception/codeception": "^4.0",
-    "phpmd/phpmd": "2.13.0",
-    "sebastian/phpcpd": "^6.0",
+    "php-censor/phpdoc-checker": "^3.1",
     "phploc/phploc": "^7.0",
-    "php-censor/phpdoc-checker": "^3.1"
+    "phpmd/phpmd": "2.13.0",
+    "phpstan/phpstan": "^1.10",
+    "phpstan/phpstan-symfony": "^1.3",
+    "sebastian/phpcpd": "^6.0",
+    "squizlabs/php_codesniffer": "^3.6",
+    "symplify/phpstan-rules": "^12.4"
   },
-  "bin":["bin/mds-code-check"]
+  "bin": [
+    "bin/mds-code-check"
+  ]
 }
